# its-a-plane-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: external-projects.cmake
